# receivables-ai

./: .env.example  .gitignore  DATA_PROCESSING_AGREEMENT.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  migrate_from_appstate.py  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial.py
backend/: __init__.py  llm_provider.py  logging_config.py  pii_redactor.py  rag_engine.py  server.py
backend/ai_intelligence/: __init__.py
backend/anomalies/: __init__.py
backend/auth/: __init__.py
backend/cases/: __init__.py
backend/config/: __init__.py
backend/contracts/: __init__.py
backend/custom_model/: __init__.py
backend/data/: db.json  generate_test_data.py  generate_test_data_original.py
backend/db/: __init__.py
backend/documents/: __init__.py
backend/extraction/: __init__.py
backend/integration/: __init__.py
backend/matching/: __init__.py
backend/models/: __init__.py  database.py
backend/policy/: __init__.py
backend/schemas/: __init__.py
backend/together_finetune/: __init__.py
backend/triage/: __init__.py
data/: auditlens.db
frontend/: app.js  index.html
frontend-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-src/src/: App.jsx  App.tsx  index.css  main.jsx
frontend/assets/: index-0C4USHiG.js  index-0GDd3ia6.js  index-0_TLuteL.js  index-1bMjVhny.js  index-5ndVhuhs.js  index-8B7CqA9O.css  index-8G7F_ZuW.js  index-9SSunfke.js  index-Ae-yuXzh.css  index-B21c1fJr.css  (+120 more)
tests/: conftest.py  test_phase1.py
(+5 files in other folders)
